--- a/style.css
+++ b/style.css
@@ -5,12 +5,17 @@
 }
 header{
     background-color: rgb(255, 111, 59);
+    padding: 16px 0;
 }
 
 .logo img{
     height: 80px;
-
+    
+    box-shadow: 0 3px 2px rgba(46, 46, 46, 0.61);
+    border-radius: 34px;
+    cursor: pointer;
 }
+
 .cabecalho{
     display: flex;
     align-items: center;
@@ -22,26 +27,90 @@ header{
     border-radius: 10px;
     border: none;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.507);
+    
+   
 }
+.pesquisa{
+    position: relative;
+}
+.bi-search{
+    font-size: 15px;
+    color: rgb(209, 15, 15);
+    position:absolute;
+    right: 20px;
+    top: 6px;
+    text-shadow: 0px 2px 2px black;
+    cursor: pointer;
+}
+.bi-search:hover{
+   
+   color: rgb(136, 3, 3);
+}   
 nav ul{
     display: flex;
     justify-content: center;
     list-style: none;
-    gap: 40px;
+    gap: 50px;
     
 
 }
 nav ul li a{
     text-decoration: none;
     color: white;
+    position: relative;
     
+}
+nav ul li a:after{
+    padding-bottom: 5px;
+    transform: scaleX(0);
+    transform-origin: center;
+    transition: transform 0.3s ease-out;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 2px;
+    width: 100%;
+    background-color: rgb(255, 0, 0);
+}
+nav ul li a:hover:after{
+    transform: scaleX(1);
+}
+nav ul li a:hover{
+    color: rgb(255, 255, 255);
+   border-bottom: 3px solid rgb(241, 9, 9);
+   background-color: rgba(114, 55, 27, 0.911);
+   
 }
 .icones{
     font-size: 2em;
     color: white;
     margin: 0 10px;
     cursor: pointer;
+    
 }
 .icones i:hover{
     color: red;
-}
+}   
+    
+  
+  
+.bi{
+    text-shadow: 0px 2px 2px black;
+}   
+body{
+    background-color: rgb(204, 204, 204);
+    font-family: Arial, Helvetica, sans-serif
+}    
+main{
+background-color:white ;
+margin: 16px;
+padding: 30px;
+border-radius: 10px;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.384);
+}   
+main section{
+    margin-bottom: 36px;
+}        
+main h2{
+    color: rgb(255, 111, 59);;
+}  
